--- a/prologin/gcc/templates/gcc/application/form.html
+++ b/prologin/gcc/templates/gcc/application/form.html
@@ -11,7 +11,7 @@
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <input class="halo-button" type="submit" value="{%trans "Validate and seclect my wishes" %}">
+        <input class="halo-button" type="submit" value="{%trans "Validate and select my wishes" %}">
     </form>
 </div>
 </section>
