--- a/prologin/gcc/templates/gcc/application/summary.html
+++ b/prologin/gcc/templates/gcc/application/summary.html
@@ -72,7 +72,7 @@
                                 <tbody>
                                     <tr>
                                         <td width="100%">
-                                            <p> {% trans "Sadly you did not applied yet for the curent edition..." %} </p>
+                                            <p> {% trans "Sadly you did not applied yet for the current edition..." %} </p>
                                         </td>
                                         <td class="text-right">
                                             <a  href="{% url 'gcc:application_form' edition=current_edition %}"
