--- a/prologin/gcc/templates/gcc/users/login.html
+++ b/prologin/gcc/templates/gcc/users/login.html
@@ -1,16 +1,15 @@
 {% extends "gcc/base.html" %}
 {% load i18n %}
 {% load static %}
-
-{% block title %}{% trans "GCC! − Login" %}{% endblock %}
+{% block title %}{% trans "GCC! − Sign in" %}{% endblock %}
 {% block header-popup %}
 <div id="header-popup">
-    <h2>{% trans "Connect to GCC!" %}</h2>
+    <h2>{% trans "Sign in to GCC!" %}</h2>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
         <div style="text-align: center">
-            <button type="submit">{% trans "Connect" %}</button>
+            <button type="submit">{% trans "Sign in" %}</button>
         </div>
         <input type="hidden" name="next" value="/gcc/">
     </form>
