--- a/prologin/gcc/templates/gcc/editions.html
+++ b/prologin/gcc/templates/gcc/editions.html
@@ -13,7 +13,7 @@
     </div>
     <div class="container edition">
         <a href="{{url}}" class="poster">
-      <img src="{% static 'gcc/img/posters/2018.full.jpg' %}" />
+      <img src="{% static 'archives/gcc/2018/poster.full.jpg' %}" />
     </a>
         <div class="description">
             <p>
@@ -24,10 +24,10 @@
             </p>
             <div class="carousel">
                 <a href="https://flic.kr/s/aHsmi4bcXd">
-          <img src="{% static 'gcc/img/photos/2018/01.jpg' %}" />
-          <img src="{% static 'gcc/img/photos/2018/02.jpg' %}" />
-          <img src="{% static 'gcc/img/photos/2018/03.jpg' %}" />
-          <img src="{% static 'gcc/img/photos/2018/04.jpg' %}" />
+          <img src="{% static 'archives/gcc/2018/photos/01.jpg' %}" />
+          <img src="{% static 'archives/gcc/2018/photos/02.jpg' %}" />
+          <img src="{% static 'archives/gcc/2018/photos/03.jpg' %}" />
+          <img src="{% static 'archives/gcc/2018/photos/04.jpg' %}" />
         </a>
             </div>
         </div>
@@ -46,14 +46,14 @@
             </p>
             <div class="carousel">
                 <a href="">
-          <img src="{% static 'gcc/img/photos/2017/01.jpg' %}" />
-          <img src="{% static 'gcc/img/photos/2017/02.jpg' %}" />
-          <img src="{% static 'gcc/img/photos/2017/03.jpg' %}" />
+          <img src="{% static 'archives/gcc/2017/photos/01.jpg' %}" />
+          <img src="{% static 'archives/gcc/2017/photos/02.jpg' %}" />
+          <img src="{% static 'archives/gcc/2017/photos/03.jpg' %}" />
         </a>
             </div>
         </div>
         <a href="{{url}}" class="poster">
-      <img src="{% static 'gcc/img/posters/2017.full.jpg' %}" class="poster" />
+      <img src="{% static 'archives/gcc/2017/poster.full.jpg' %}" class="poster" />
     </a>
     </div>
 </section>
@@ -71,7 +71,7 @@
             </p>
             <div class="carousel">
                 <a href="https://flic.kr/s/aHskCyYBke">
-          <img src="{% static 'gcc/img/photos/2016.jpg' %}" />
+          <img src="{% static 'archives/gcc/2016/photos/01.jpg' %}" />
         </a>
             </div>
         </div>
@@ -90,7 +90,7 @@
             </p>
             <div class="carousel">
                 <a href="https://flic.kr/s/ahskjafpwt">
-          <img src="{% static 'gcc/img/photos/2015.jpg' %}" />
+          <img src="{% static 'archives/gcc/2015/photos/01.jpg' %}" />
         </a>
             </div>
         </div>
@@ -110,7 +110,7 @@
                 {% endblocktrans %}
             </p>
             <div class="carousel">
-                <img src="{% static 'gcc/img/photos/2014.jpg' %}" />
+                <img src="{% static 'archives/gcc/2014/photos/01.jpg' %}" />
       </div>
             </div>
         </div>
