--- a/prologin/gcc/templates/gcc/base.html
+++ b/prologin/gcc/templates/gcc/base.html
@@ -29,7 +29,7 @@
   </head>
   <body>
     <!-- Header -->
-    <section id="header" class="wrapper" style="background: url({% static 'gcc/img/collage_index_blur_darker.jpg' %})">
+    <section id="header" class="wrapper" style="background: url({% static 'gcc/img/collage.jpg' %})">
       <!-- Quick access popup-like frame -->
       {% block header-popup %}{% endblock %}
 
