--- a/prologin/gcc/templates/gcc/users/profile.html
+++ b/prologin/gcc/templates/gcc/users/profile.html
@@ -67,6 +67,7 @@
                         </li>
                     </ul>
                 </div>
+                {% if see_private %}
                 <div class="col-sm-8 col-md-5 compact-headings">
                     <h3>{% trans "Applications" %}</h3>
                     {% if not has_applied_to_current %}
@@ -151,6 +152,7 @@
                     </div>
                     {% endfor %}
                 </div>
+                {% endif %}
                 <div class="col-sm-12 col-md-4 compact-headings">
                     {% with shown_author.entries_published.all as entries_published %}
                     {% if entries_published %}
