--- a/prologin/gcc/templates/gcc/users/register.html
+++ b/prologin/gcc/templates/gcc/users/register.html
@@ -4,7 +4,12 @@
 {% block title %}{% trans "GCC! − Register" %}{% endblock %}
 {% block header-popup %}
 <div id="header-popup">
-    <h2>{% trans "Register" %}</h2>
+    <h2>{% trans "Register to " %}<a href="{% url 'home' %}">Prologin</a></h2>
+    <p>
+      <strong>
+          You are going to register to the <a href="{% url "home" %}">Prologin website</a>, check out the contest organized by our organisation.
+      </strong>
+    </p>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
