--- a/prologin/gcc/templates/gcc/application/wishes.html
+++ b/prologin/gcc/templates/gcc/application/wishes.html
@@ -13,7 +13,7 @@
 <section class="wrapper">
 <div class="title">{% trans "Summer camps locations" %}</div>
 <div class="container">
-    <h2>{% trans "Chose my location wishes" %}</h2>
+    <h2>{% trans "Choose my location wishes" %}</h2>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
