--- a/gccsite/gcc/templates/gcc/base.html
+++ b/gccsite/gcc/templates/gcc/base.html
@@ -156,7 +156,7 @@
     </section>
 
     <!-- Scripts -->
-    <script src="{% static 'gcc/js/jquery.min.js' %}"></script>
+    <script src="{% static 'vendor/jquery/dist/jquery.min.js' %}"></script>
     <script src="{% static 'gcc/js/jquery.dropotron.min.js' %}"></script>
     <script src="{% static 'gcc/js/browser.min.js' %}"></script>
     <script src="{% static 'gcc/js/breakpoints.min.js' %}"></script>
