--- a/gccsite/gcc/templates/gcc/application/wishes.html
+++ b/gccsite/gcc/templates/gcc/application/wishes.html
@@ -27,7 +27,7 @@
     <div class="title">{% trans "Available centers" %}</div>
     <div class="container">
         {% for event in events %}
-        <a href="{% url "centers:map" %}"><h3>{{ event.center.name }}</h3></a>
+        <a href="//prologin.org/center"><h3>{{ event.center.name }}</h3></a>
         <p>
             {% blocktrans with start=event.event_start end=event.event_end %}From {{start}} to {{end}}{% endblocktrans %}<br />
             {{event.center.address}}, {{event.center.postal_code}} {{event.center.city}}<br />
