--- a/gccsite/users/templates/users/edit.html
+++ b/gccsite/users/templates/users/edit.html
@@ -1,5 +1,6 @@
 {% extends "gcc/base.html" %}
 {% load static %}
+{% load crispy_forms_tags %}
 {% load i18n staticfiles rules %}
 {% block title %}{% blocktrans with edited_user.username as username %}Editing {{ username }}'s profile{% endblocktrans %}{% endblock %}
 {% block head %}
@@ -10,8 +11,8 @@
     <div class="container">
         <div class="bootstrap_region">
             <h1>{% blocktrans with edited_user.username as username %}Editing {{ username }}'s profile{% endblocktrans %}</h1>
-            {% include "gcc/users/as_staff_warning.html" %}
-            <p class="pull-right"><a href="{% url 'gcc:edit_password' edited_user.pk %}" class="btn btn-default"><i class="fa fa-key"></i> {% trans "Change password" %}</a></p>
+            {% include "users/as_staff_warning.html" %}
+            {# TODO <p class="pull-right"><a href="{% url 'gcc:edit_password' edited_user.pk %}" class="btn btn-default"><i class="fa fa-key"></i> {% trans "Change password" %}</a></p> #}
             <p>{% trans "Don't forget to click “Save” at the bottom when you are done making changes." %}</p>
             <form method="post" enctype="multipart/form-data">
                 {% csrf_token %}
