--- a/gccsite/gcc/templates/gcc/base.html
+++ b/gccsite/gcc/templates/gcc/base.html
@@ -70,7 +70,7 @@
                 <li><a href="{% url 'users:edit' user.id %}"><i class="fa fa-cog"></i>{% trans 'Profile & options' %}</a></li>
                 <li><a href="{% url 'gcc:application_summary' user.id %}"><i class="fa fa-pencil-alt"></i>{% trans 'My applications' %}</a></li>
                 <li>
-                  <form method="post" action="{% url 'users:logout' %}?next=/gcc">
+                    <form method="post" action="{% url 'users:logout' %}">
                     {% csrf_token %}
                     <button type="submit">{% trans 'Sign out' %}</button>
                   </form>
