--- a/gccsite/gcc/templates/gcc/index.html
+++ b/gccsite/gcc/templates/gcc/index.html
@@ -30,7 +30,7 @@
                 {% if user.is_authenticated %}
                 <a href="application/form/{{last_edition}}" class="button style3 large">{% trans 'Register' %}</a>
                 {% else %}
-                <a href="user/register" class="button style3 large">{% trans 'Sign in' %}</a>
+                <a href="{% url 'oauth:autologin' %}" class="button style3 large">{% trans 'Sign in' %}</a>
                 {% endif %}
             </div>
             <p>
